--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,19 +4,14 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-
   font-weight: normal;
+  position: absolute;
 }
 
 @media (min-width: 1024px) {
   body {
     display: flex;
-    /* place-items: center; */
+    place-items: center;
   }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
 }
