--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,15 +3,23 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
+  overflow-wrap: break-word;
   font-weight: normal;
-  position: absolute;
+  max-height: 600px;
+  margin: 15px;
 }
 
 @media (min-width: 1024px) {
   body {
     display: flex;
-    place-items: center;
+    /* place-items: center; */
+    /* width: 1280px; */
   }
 
+  /* #app {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 2rem;
+  } */
 }
